# perimeter-scan

./: .gitignore  LICENSE  PUBLISH.md  README.md  pyproject.toml
perimeter_scan/: __init__.py  cli.py  config.py  dns_recon.py  http_probe.py  models.py  report.py  scanner.py  severity.py  subdomains.py  takeover.py  tls.py
tests/: test_cli.py  test_engine.py  test_report.py
