[project]
name = "perimeter-scan"
version = "0.1.0"
description = "Passive external attack-surface scanner — find your exposed subdomains, expiring certs, missing security headers, and dangling DNS before attackers do."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["security", "attack-surface", "subdomain", "recon", "dns", "tls", "osint", "appsec"]
authors = [{ name = "Captain" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27",
    "dnspython>=2.6",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.urls]
Homepage = "https://perimeter-hq.com"
Source = "https://github.com/MrAbubaker1/perimeter-scan"

[project.scripts]
perimeter-scan = "perimeter_scan.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["perimeter_scan*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
